test/Runner/errors/tests/MI/Test4.mi.js
eve("Suite", () => {
	throw new Error();
});